--- a/app/globals.css
+++ b/app/globals.css
@@ -4,12 +4,30 @@
   margin: 0;
 }
 
+html {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
+html::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
   margin: 0;
   padding: 0;
+}
+
+body {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
 }
 
 body {
