--- a/app/globals.css
+++ b/app/globals.css
@@ -40,12 +40,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: transparent;
+  background: #000000;
   min-height: 100vh;
 }
 
 html {
-  background: transparent;
+  background: #000000;
 }
 
 #hero {
